--- a/TransitionAnimation/app/src/main/res/layout/android_layout.xml
+++ b/TransitionAnimation/app/src/main/res/layout/android_layout.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/md_light_green_900"
-    android:id="@+id/androidLayout">
+    android:id="@+id/androidLayout"
+    >
 
 
     <TextView
